# pq-tls-readiness

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: default.yaml  federal.yaml  tranco.yaml
config/registry/: cdn_asns.yaml  named_groups.yaml  signature_algorithms.yaml
docs/: architecture.md  data-schema.md
scripts/: ct_signature_sweep.py  download_asn_db.sh  download_dotgov.sh  run_pilot.sh
src/pqreadiness/: __init__.py  cli.py  config.py  models.py
src/pqreadiness/analysis/: __init__.py  aggregate.py  report.py  statistics.py
src/pqreadiness/classify/: __init__.py  authentication.py  keyexchange.py  registry.py
src/pqreadiness/enrich/: __init__.py  asn.py  hosting.py
src/pqreadiness/ingest/: __init__.py  dotgov.py  plainlist.py  targets.py
src/pqreadiness/pipeline/: __init__.py  concurrency.py  runner.py
src/pqreadiness/probe/: __init__.py  certificate.py  openssl.py  profiles.py
src/pqreadiness/resolve/: __init__.py  dns.py
src/pqreadiness/storage/: __init__.py  schema.py  writer.py
src/pqreadiness/tools/: __init__.py  pqscan.py
src/pqreadiness/utils/: __init__.py  logging.py  shell.py
src/pqreadiness/viz/: __init__.py  plots.py
tests/: conftest.py  test_aggregate_agency.py  test_aggregate_domain.py  test_classify_authentication.py  test_classify_keyexchange.py  test_enrich_hosting.py  test_ingest_targets.py  test_probe_parsing.py  test_statistics.py
